--- a/encriptadorver1_2.html
+++ b/encriptadorver1_2.html
@@ -35,7 +35,7 @@
             }
         </script>
         <div>
-            <p>Solución para el programa de formación de Alura junto a Oracle Next Education: ONE. </p><br> <p> Escrito y diseñado por Ivan Robayo. GitHub: <a target="_blank" rel="noopener noreferrer" href="https://github.com/ivanrobayo667"> @ivanrobayo667</a> LinkedIn: <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/soyivan1997/">/soyivan1997</a> </p><br>
+            <p>Solución para el programa de formación de Alura junto a Oracle Next Education: ONE. </p><br> <p> Escrito y diseñado por Ivan Robayo. GitHub: <a target="_blank" rel="noopener noreferrer" href="https://github.com/navirobayo"> @navirobayo</a> LinkedIn: <a target="_blank" rel="noopener noreferrer" href="https://www.linkedin.com/in/soyivan1997/">/soyivan1997</a> </p><br>
         </div>
     </body>
 </html>
